--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li><a href="faqs.html">FAQs</a></li>
                         <li><a href="aboutUs.html">About Us</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
-                        <li><a class="logactive" href="#">Login</a></li>
+                        <li><a class="logactive" href="login.html">Login</a></li>
 
                     </ul>
                 </div>
