--- a/login.html
+++ b/login.html
@@ -172,16 +172,16 @@
             <div class="login-logo">
                 <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
             </div>
-            <div class="login-title">LOGIN</div>
+            <div class="login-title">Login</div>
             <form action="#" class="login-form">
                 <div class="login-user-details">
                     <div class="login-input-box">
                         <label class="login-details">Email</label>
-                        <input class="login-input" type="text" name="email" placeholder="Enter Email" required>
+                        <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
                     </div>
                     <div class="login-input-box">
                         <label class="login-details">Password</label>
-                        <input class="login-input" type="password" id="pass" name="pass" placeholder="Enter A Password"
+                        <input class="login-input" type="password" id="pass" name="pass" placeholder="Enter your password"
                             required>
                     </div>
                     <div class="login-sh-fp">
@@ -199,7 +199,7 @@
                 </div>
             </form>
 
-            <p class="reg-text">Don't Have An Account <span class="reg-link"><a href="">Regester Now</a></span>
+            <p class="reg-text">Don't Have An Account <span class="reg-link"><a href="registration.html">Regester Now</a></span>
             </p>
         </div>
     </body>
