--- a/login.html
+++ b/login.html
@@ -172,7 +172,7 @@
                 <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
             </div>
             <div class="login-title">Login</div>
-            <form action="#" class="login-form">
+            <form action="#" class="login-form" autocomplete="off">
                 <div class="login-user-details">
                     <div class="login-input-box">
                         <label class="login-details">Email</label>
