--- a/registration.html
+++ b/registration.html
@@ -182,7 +182,7 @@
         <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
       </div>
       <div class="login-title">Create Account</div>
-      <form action="#" class="reg-form">
+      <form action="#" class="reg-form" autocomplete="off">
         <div class="reg-user-details">
           <div class="login-input-box">
             <label for="first_name" class="details">First Name</label>
