Forget Password Contact Number & Email

--- a/forgetPasswordEmail.html
+++ b/forgetPasswordEmail.html
@@ -4,13 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>FORGET PASSWORD</title>
     </head>
     <style>
         * {
             margin: 0;
             padding: 0;
-            text-decoration: none;
             box-sizing: border-box;
+            text-decoration: none;
         }
 
         .bg-login-reg {
@@ -58,7 +60,7 @@
             left: 0;
             bottom: 0;
             height: 3px;
-            width: 60px;
+            width: 70px;
             border-radius: 8px;
             background: linear-gradient(135deg, #F7A76C, #90EE90);
         }
@@ -111,29 +113,12 @@
             border-radius: 5px;
         }
 
-        .login-sh-fp {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        .login-checkbox {
-            margin: 10px;
-            accent-color: #F7A76C;
-        }
-
-        .login-show-pass {
+        .fp-text {
             color: #F7A76C;
             font-weight: 700;
+            font-size: 20px;
+            margin-bottom: 30px;
         }
-
-        .pass_link a {
-            margin: 10px;
-            text-decoration: underline;
-            color: #F7A76C;
-            font-weight: 700;
-        }
-
         .reg-text {
             margin-left: 10px;
             color: #fff;
@@ -158,60 +143,34 @@
                 max-height: 300px;
                 overflow-y: scroll;
             }
-        }
-        @media(max-width: 480px) {
-            .login-sh-fp{
-                flex-direction: column;
+            .fp-text{
+                font-size: 18px;
             }
         }
     </style>
 
     <body class="bg-login-reg">
         <div class="login-container">
-            <div class="login-logo">
-                <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
-            </div>
-            <div class="login-title">Login</div>
-            <form action="#" class="login-form" autocomplete="off">
-                <div class="login-user-details">
-                    <div class="login-input-box">
-                        <label class="login-details">Email</label>
-                        <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
-                    </div>
-                    <div class="login-input-box">
-                        <label class="login-details">Password</label>
-                        <input class="login-input" type="password" id="pass" name="pass" placeholder="Enter your password"
-                            required>
-                    </div>
-                    <div class="login-sh-fp">
-                        <div>
-                            <input type="checkbox" class="login-checkbox" onClick="showPassword()" /><span
-                                class="login-show-pass">Show Password</span>
+            <div class="login-title">Forget Password</div>
+            <div class="content">
+                <form action="#" class="login-form">
+                    <div class="login-user-details">
+                        <div class="login-input-box">
+                            <h5 class="fp-text">Provide your registered email</h5>
+
+                            <label for="email" class="details">Email</label>
+                            <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
                         </div>
-                        <div class="pass_link"><a href="forgetPasswordEmail.html">Forgot password?</a></div>
                     </div>
-                </div>
 
-
-                <div class="login-buttons">
-                    <button class="login-button">Login</button>
-                </div>
-            </form>
-
-            <p class="reg-text">Don't Have An Account <span class="reg-link"><a href="registration.html">Regester Now</a></span>
-            </p>
+                    <div class="login-buttons">
+                        <button class="login-button">Next</button>
+                    </div>
+                    <p class="reg-text"><span class="reg-link"><a href="forgetPasswordPhone.html">Try with contact number</a></span>
+                </form>
+            </div>
         </div>
+
     </body>
 
 </html>
-<script>
-    function showPassword() {
-        let Pass = document.getElementById("pass");
-        if (Pass.type === "password") {
-            Pass.type = "text";
-        }
-        else {
-            Pass.type = "password";
-        }
-    }
-</script>
