--- a/forgetPassword.html
+++ b/forgetPassword.html
@@ -3,7 +3,9 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="CSS/FORGET PASSWORD.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Forget Password</title>
     </head>
     <style>
         * {
@@ -58,19 +60,33 @@
             left: 0;
             bottom: 0;
             height: 3px;
-            width: 60px;
-            border-radius: 8px;
+            width: 80px;
+            border-radius: 5px;
             background: linear-gradient(135deg, #F7A76C, #90EE90);
         }
 
-        .login-form .login-user-details .login-input-box {
-            margin-left: 10px;
-            margin-top: 20px;
+        .reg-form .reg-user-details {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin: 20px 0 12px 0;
+        }
+
+        .reg-form .reg-user-details .login-input-box {
+            margin-bottom: 15px;
+            width: calc(100% / 2 - 20px);
+        }
+
+        .reg-form .login-input-box .details {
+            display: block;
+            font-weight: 500;
+            margin-bottom: 5px;
             font-weight: 700;
             color: #fff;
         }
 
-        .login-user-details .login-input-box .login-input {
+        .reg-user-details .login-input-box .reg-input,
+        select {
             height: 40px;
             width: 100%;
             outline: none;
@@ -85,12 +101,12 @@
             margin-bottom: 10px;
         }
 
-        .login-user-details .login-input-box .login-input:focus,
-        .login-user-details .login-input-box .login-input:valid {
-            border: 2px solid #F7A76C;
+        .reg-user-details .login-input-box .reg-input:focus,
+        .reg-user-details .login-input-box .reg-input:valid {
+            border-color: 2px solid #F7A76C;
         }
 
-        .login-form .login-buttons .login-button {
+        .reg-form .login-buttons .login-button {
             height: 45px;
             width: 99%;
             border-radius: 10px;
@@ -105,16 +121,19 @@
             margin: 10px;
         }
 
-        .login-form .login-buttons .login-button:hover {
+        .reg-form .login-buttons .login-button:hover {
             background: #90EE90;
             color: #000;
             border-radius: 5px;
         }
 
-        .login-sh-fp {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
+        .login-text {
+            margin-left: 10px;
+            color: #fff;
+        }
+
+        .login-link a {
+            color: #F7A76C;
         }
 
         .login-checkbox {
@@ -127,42 +146,28 @@
             font-weight: 700;
         }
 
-        .pass_link a {
-            margin: 10px;
-            text-decoration: underline;
-            color: #F7A76C;
-            font-weight: 700;
-        }
-
-        .reg-text {
-            margin-left: 10px;
-            color: #fff;
-        }
-
-        .reg-link a {
-            color: #F7A76C;
-        }
-
-        @media(max-width: 660px) {
+        @media(max-width: 584px) {
             .login-container {
                 max-width: 100%;
             }
 
-            .login-form .login-user-details .login-input-box,
+            .reg-form .reg-user-details .login-input-box,
             .login-buttons {
                 margin-bottom: 15px;
                 width: 95%;
             }
 
-            .login-form .login-user-details {
+            .reg-form .category {
+                width: 100%;
+            }
+
+            .reg-form .reg-user-details {
                 max-height: 300px;
                 overflow-y: scroll;
             }
-        }
 
-        @media(max-width: 480px) {
-            .login-sh-fp {
-                flex-direction: column;
+            .reg-user-details::-webkit-scrollbar {
+                width: 5px;
             }
         }
     </style>
@@ -172,48 +177,55 @@
             <div class="login-logo">
                 <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
             </div>
-            <div class="login-title">Login</div>
-            <form action="#" class="login-form" autocomplete="off">
-                <div class="login-user-details">
+            <div class="login-title">Forget Password</div>
+            <form action="#" class="reg-form">
+                <div class="reg-user-details">
                     <div class="login-input-box">
-                        <label class="login-details">Email</label>
-                        <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
-                    </div>
-                    <div class="login-input-box">
-                        <label class="login-details">Password</label>
-                        <input class="login-input" type="password" id="pass" name="pass"
-                            placeholder="Enter your password" required>
-                    </div>
-                    <div class="login-sh-fp">
-                        <div>
-                            <input type="checkbox" class="login-checkbox" onClick="showPassword()" /><span
-                                class="login-show-pass">Show Password</span>
-                        </div>
-                        <div class="pass_link"><a href="forgetPasswordEmail.html">Forgot password?</a></div>
+                        <label for="otp" class="details">OTP</label>
+                        <input class="reg-input" type="text" name="otp" placeholder="Enter OTP here"
+                            oninput="validateOTP(this)" required>
                     </div>
                 </div>
-
+                <div class="reg-user-details">
+                    <div class="login-input-box">
+                        <label for="password" class="details">New Password</span>
+                            <input class="reg-input" type="password" id="password" name="password"
+                                placeholder="Enter new password" required>
+                    </div>
+                    <div class="login-input-box">
+                        <label for="confirm_password" class="details">Re-Type Password</span>
+                            <input class="reg-input" type="password" name="confirm_password" id="confirm_password"
+                                placeholder="Enter password again" required>
+                    </div>
+                </div>
+                <input type="checkbox" class="login-checkbox" onClick="showPassword()" /><span
+                    class="login-show-pass">Show Password</span>
 
                 <div class="login-buttons">
-                    <button class="login-button">Login</button>
+                    <button class="login-button">Done</button>
                 </div>
-            </form>
 
-            <p class="reg-text">Don't Have An Account <span class="reg-link"><a href="registration.html">Regester
-                        Now</a></span>
-            </p>
+            </form>
         </div>
+
     </body>
 
 </html>
 <script>
     function showPassword() {
-        let Pass = document.getElementById("pass");
-        if (Pass.type === "password") {
-            Pass.type = "text";
-        }
-        else {
-            Pass.type = "password";
+        let password = document.getElementById("password");
+        let confirm_password = document.getElementById("confirm_password");
+
+        if (password.type === "password") {
+            password.type = "text";
+            confirm_password.type = "text";
+        } else {
+            password.type = "password";
+            confirm_password.type = "password";
         }
     }
+    function validateOTP(input) {
+        input.value = input.value.replace(/[^0-9]/, '');
+    }
+
 </script>
