--- a/forgetPasswordEmail.html
+++ b/forgetPasswordEmail.html
@@ -119,6 +119,7 @@
             font-size: 20px;
             margin-bottom: 30px;
         }
+
         .reg-text {
             margin-left: 10px;
             color: #fff;
@@ -143,7 +144,8 @@
                 max-height: 300px;
                 overflow-y: scroll;
             }
-            .fp-text{
+
+            .fp-text {
                 font-size: 18px;
             }
         }
@@ -151,24 +153,26 @@
 
     <body class="bg-login-reg">
         <div class="login-container">
-            <div class="login-title">Forget Password</div>
-            <div class="content">
-                <form action="#" class="login-form">
-                    <div class="login-user-details">
-                        <div class="login-input-box">
-                            <h5 class="fp-text">Provide your registered email</h5>
-
-                            <label for="email" class="details">Email</label>
-                            <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
-                        </div>
-                    </div>
-
-                    <div class="login-buttons">
-                        <button class="login-button">Next</button>
-                    </div>
-                    <p class="reg-text"><span class="reg-link"><a href="forgetPasswordPhone.html">Try with contact number</a></span>
-                </form>
+            <div class="login-logo">
+                <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
             </div>
+            <div class="login-title">Forget Password</div>
+            <form action="#" class="login-form">
+                <div class="login-user-details">
+                    <div class="login-input-box">
+                        <h5 class="fp-text">Provide your registered email</h5>
+
+                        <label for="email" class="details">Email</label>
+                        <input class="login-input" type="text" name="email" placeholder="Enter your email" required>
+                    </div>
+                </div>
+
+                <div class="login-buttons">
+                    <button class="login-button">Next</button>
+                </div>
+                <p class="reg-text"><span class="reg-link"><a href="forgetPasswordPhone.html">Try with contact
+                            number</a></span>
+            </form>
         </div>
 
     </body>
