--- a/registration.html
+++ b/registration.html
@@ -70,7 +70,7 @@
       margin: 20px 0 12px 0;
     }
 
-    form .reg-user-details .login-input-box {
+    .reg-form .reg-user-details .login-input-box {
       margin-bottom: 15px;
       width: calc(100% / 2 - 20px);
     }
@@ -196,11 +196,13 @@
           </div>
           <div class="login-input-box">
             <label for="password" class="details">Password</label>
-            <input class="reg-input" type="password" id="password" name="password" placeholder="Enter your password" required>
+            <input class="reg-input" type="password" id="password" name="password" placeholder="Enter your password"
+              required>
           </div>
           <div class="login-input-box">
             <label for="confirm_password" class="details">Confirm Password</label>
-            <input class="reg-input" type="password" id="confirm_password" name="confirm_password" placeholder="Enter password again" required>
+            <input class="reg-input" type="password" id="confirm_password" name="confirm_password"
+              placeholder="Enter password again" required>
           </div>
           <div class="login-input-box">
             <label for="address" class="details">Address</label>
