--- a/forgetPasswordPhone.html
+++ b/forgetPasswordPhone.html
@@ -164,7 +164,7 @@
 
                         <label for="contact_number" class="details">Contact Number</label>
                         <input class="login-input" type="text" name="contact_number"
-                            placeholder="Enter your contact number" required>
+                            placeholder="Enter your contact number" oninput="validateOTP(this)" required>
                     </div>
                 </div>
 
@@ -178,3 +178,8 @@
     </body>
 
 </html>
+<script>
+    function validateOTP(input) {
+        input.value = input.value.replace(/[^0-9]/, '');
+    }
+</script>
