--- a/forgetPasswordPhone.html
+++ b/forgetPasswordPhone.html
@@ -160,7 +160,7 @@
             <form action="#" class="login-form">
                 <div class="login-user-details">
                     <div class="login-input-box">
-                        <h5 class="fp-text">Provide your registered Contact Number</h5>
+                        <h5 class="fp-text">Provide your registered contact number</h5>
 
                         <label for="contact_number" class="details">Contact Number</label>
                         <input class="login-input" type="text" name="contact_number"
