--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="slider">
                     <div class="slide-box fade">
                         <div class="slide-number">1 / 11</div>
-                        <img src="Assets/Images/Sliders/Slider1.png" alt="Loading...">
+                        <img src="Assets/Images/Sliders/Slider1.jpg" alt="Loading...">
                     </div>
 
                     <div class="slide-box fade">
