Form Design & Table Design

--- a/table.html
+++ b/table.html
@@ -51,12 +51,12 @@
         .table-container .table-header {
             background: #F7A76C;
             color: #000;
-            border-bottom: 2px solid #000;
         }
 
         .table-container .table-header,
         .table-container .table-data {
             padding: 8px;
+            border: 2px solid #000;
         }
 
         .table-container .table-row:nth-child(even) {
