--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@
                 <ul class="icon">
                     <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
                                 class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@deshcapital" target="_blank"><i class="fab fa-youtube"></i></a></li>
                 </ul>
             </div>
             <div class="quick-links">
