--- a/index.html
+++ b/index.html
@@ -255,21 +255,21 @@
         </section>
 
         <!-- Closest Services Section END -->
-        <!-- Mortgage Section Start -->
-        <section class="index-mortgage-sections">
-            <h1 class="index-mortgage-title">Learn About Mortgage</h1>
-            <div class="index-mortgage-section">
+        <!-- Document Section Start -->
+        <section class="index-document-sections">
+            <h1 class="index-document-title">Initial Pre-Qualification Document List</h1>
+            <div class="index-document-section">
                 <div class="for-english">
-                    <h3 class="index-mortgage-header">For English</h3>
-                    <a class="index-mortgage-button" href="mortgageInfo.html">Click Here</a>
+                    <h3 class="index-document-header">For English</h3>
+                    <a class="index-document-button" href="documentList.html">Click Here</a>
                 </div>
                 <div class="for-bangla">
-                    <h3 class="index-mortgage-header">বাংলার জন্য</h3>
-                    <a class="index-mortgage-button" href="mortgageInfoBangla.html">ক্লিক করুন</a>
+                    <h3 class="index-document-header">বাংলার জন্য</h3>
+                    <a class="index-document-button" href="documentListBangla.html">ক্লিক করুন</a>
                 </div>
             </div>
         </section>
-        <!-- Mortgage Section END -->
+        <!-- Document Section END -->
 
         <!-- HAPPY CLIENT SECTION START -->
         <section class="feedbacks">
@@ -278,8 +278,7 @@
                 <div class="feedback">
                     <p class="feedback-text"><sup class="comma">"</sup> The staff at Desh Capital LLC gave me
                         exceptional customer service throughout the whole mortgage application process. They were
-                        constantly available to respond to my queries and address any issues I could have.
-                    </p>
+                        constantly available to respond to my queries and address any issues I could have.</p>
                     <p class="feedback-by"><sup class="comma">"</sup>_Shadik Hasan</p>
                 </div>
 
@@ -319,13 +318,19 @@
         <footer class="footer">
             <div class="about">
                 <h1 class="footer-title">About Us</h1>
-                <p class="footer-text">As the owners of Desh Capital LLC, we are committed to helping our clients achieve their dream of homeownership. With years of experience in the mortgage industry, we provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and we are dedicated to building long-term relationships with our clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
+                <p class="footer-text">As the owners of Desh Capital LLC, we are committed to helping our clients
+                    achieve their dream of homeownership. With years of experience in the mortgage industry, we provide
+                    personalized service and attention to detail to identify the best mortgage solution for each
+                    client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and
+                    we are dedicated to building long-term relationships with our clients to help them achieve their
+                    financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
                 <p class="footer-text">Follow us on</p>
 
                 <ul class="icon">
                     <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
                                 class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.youtube.com/@deshcapital" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="https://www.youtube.com/@deshcapital" target="_blank"><i
+                                class="fab fa-youtube"></i></a></li>
                 </ul>
             </div>
             <div class="quick-links">
@@ -357,7 +362,8 @@
                 <h1 class="footer-title">Contact Us</h1>
                 <h3 class="nmls">NMLS 2418672</h3>
                 <p class="contact-info"><span class="contact-info-header">Address:</span> 2627 Chatham Circle
-                    <br>Kissimmee, FL 34746</p>
+                    <br>Kissimmee, FL 34746
+                </p>
                 <p class="contact-info">M-F 9am 5pm EST</p>
                 <ul class="icon">
                     <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
