--- a/index.html
+++ b/index.html
@@ -200,23 +200,21 @@
                             <img src="Assets/Images/Sliders/Slider11.jpg" alt="Loading...">
                         </div>
 
-                        <a class="previous" onclick="plusSlides(-1)"><i class="fas fa-angles-left"></i></a>
-                        <a class="next" onclick="plusSlides(1)"><i class="fas fa-angles-right"></i></a>
-
-
+                        <a class="previous" id="prevBtn"><i class="fas fa-angle-left"></i></a>
+                        <a class="next" id="nextBtn"><i class="fas fa-angle-right"></i></a>
 
                         <div style="text-align:center">
-                            <span class="rounded_btn" onclick="currentSlide(1)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(2)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(3)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(4)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(5)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(6)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(7)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(8)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(9)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(10)"></span>
-                            <span class="rounded_btn" onclick="currentSlide(11)"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
+                            <span class="rounded_btn"></span>
                         </div>
 
                     </div>
