--- a/index.html
+++ b/index.html
@@ -272,41 +272,45 @@
         <!-- HAPPY CLIENT SECTION START -->
         <section class="feedbacks">
             <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
-            <div class="feedback-box">
-                <div class="feedback">
-                    <p class="feedback-text"><sup class="comma">"</sup> The staff at Desh Capital LLC gave me
-                        exceptional customer service throughout the whole mortgage application process. They were
-                        constantly available to respond to my queries and address any issues I could have.</p>
-                    <p class="feedback-by"><sup class="comma">"</sup>_Shadik Hasan</p>
+            <div class="feedback-slideshow-container">
+                <div class="feedback-slides">
+                    <img src="Assets/Images/Feedback.png" alt="Loading...">
+                    <q class="feedback-quotes">The staff at Desh Capital LLC gave me exceptional customer service
+                        throughout the whole mortgage application process. They were constantly available to respond to
+                        my queries and address any issues I could have. </q>
+                    <p class="feedback-author">- Olivia</p>
                 </div>
 
-                <div class="feedback">
-                    <p class="feedback-text"><sup class="comma">"</sup> Desh Capital LLC handled the mortgage
-                        application procedure professionally, and I was able to submit my application without any
-                        delays.</p>
-                    <p class="feedback-by"><sup class="comma">"</sup>_Srabon</p>
+                <div class="feedback-slides">
+                    <img src="Assets/Images/Feedback.png" alt="Loading...">
+                    <q class="feedback-quotes">Desh Capital LLC handled the mortgage application procedure
+                        professionally, and I was able to submit my application without any delays.</q>
+                    <p class="feedback-author">- Lucas</p>
                 </div>
 
-                <div class="feedback">
-                    <p class="feedback-text"><sup class="comma">"</sup>I was able to save money over time since Desh
-                        Capital LLC provided rates that were more affordable than those I could find elsewhere.</p>
-                    <p class="feedback-by"><sup class="comma">"</sup>_Oassi</p>
+                <div class="feedback-slides">
+                    <img src="Assets/Images/Feedback.png" alt="Loading...">
+                    <q class="feedback-quotes">I was able to save money over time since Desh Capital LLC provided rates
+                        that were more affordable than those I could find elsewhere.</q>
+                    <p class="feedback-author">- Thomas</p>
                 </div>
 
-                <div class="feedback">
-                    <p class="feedback-text"><sup class="comma">"</sup>Every step of the mortgage process was explained
-                        to me by Desh Capital LLC, and they were open and honest about all the costs and expenses
-                        related to the loan.</p>
-                    <p class="feedback-by"><sup class="comma">"</sup>_Sg</p>
+                <div class="feedback-slides">
+                    <img src="Assets/Images/Feedback.png" alt="Loading...">
+                    <q class="feedback-quotes">Every step of the mortgage process was explained to me by Desh Capital
+                        LLC, and they were open and honest about all the costs and expenses related to the loan.</q>
+                    <p class="feedback-author">- Sg</p>
                 </div>
 
-                <div class="feedback">
-                    <p class="feedback-text"><sup class="comma">"</sup>The Desh Capital LLC team impressed me with their
-                        professionalism by treating me with respect and courtesy at all times.</p>
-                    <p class="feedback-by"><sup class="comma">"</sup>_Minhaj</p>
+                <div class="feedback-slides">
+                    <img src="Assets/Images/Feedback.png" alt="Loading...">
+                    <q class="feedback-quotes">The Desh Capital LLC team impressed me with their professionalism by
+                        treating me with respect and courtesy at all times.</q>
+                    <p class="feedback-author">- Emma</p>
                 </div>
 
-
+                <a class="feedback-prev" onclick="plusSlides(-1)">❮</a>
+                <a class="feedback-next" onclick="plusSlides(1)">❯</a>
             </div>
         </section>
         <!-- HAPPY CLIENT SECTION END -->
